Display logic and styling

--- a/src/assets/scss/1-utils/_mixins.scss
+++ b/src/assets/scss/1-utils/_mixins.scss
@@ -7,3 +7,20 @@
 		}
 	}
 }
+
+
+@mixin position( $pos ){
+	@if $pos == center {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}@else if $pos == left {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+	}@else if $pos == right {
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+	}
+}
